# MCPGuard-CLI

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  mcpguard.py  pyproject.toml
src/: __init__.py
src/core/: __init__.py  engine.py
src/reporters/: __init__.py
src/scanners/: __init__.py  config_scanner.py  dependency_scanner.py  editor_scanner.py  mcp_scanner.py  secret_scanner.py
tests/: test_mcpguard.py
